--- a/CSS/Styles_Campings.css
+++ b/CSS/Styles_Campings.css
@@ -34,7 +34,7 @@ html {
 }
 body {
   font-family: var(--body_font);
-  background-image: url(../img/Background_img.jpg);
+  background-image: url(../img/Background_gif.gif);
   background-size: cover;
   background-attachment: fixed;
   display: flex;
@@ -759,4 +759,5 @@ footer {
   .container_item:has(.card_item:hover) {
     min-height: 32rem;
   }
+
 }
