--- a/CSS/Styles_index.css
+++ b/CSS/Styles_index.css
@@ -35,7 +35,7 @@ html {
 
 body {
   font-family: var(--body_font);
-  background-image: url(../img/Background_img.jpg);
+  background-image: url(../img/Background_gif.gif);
   background-size: cover;
   background-attachment: fixed;
   display: flex;
@@ -600,4 +600,5 @@ footer {
     max-width: 120rem;
     margin: 2rem auto 0;
   }
+
 }
