--- a/CSS/Styles_Campings.css
+++ b/CSS/Styles_Campings.css
@@ -52,6 +52,10 @@ main {
   top: 0;
   z-index: 1000;
   border-bottom: 0.6rem solid var(--deep-forest);
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+  scrollbar-width: thin;
+  scrollbar-color: #28a745 rgba(40, 167, 69, 0.1);
 }
 
 nav {
@@ -753,4 +757,5 @@ footer {
   }
 
 }
+
 
