--- a/CSS/Styles_Campings.css
+++ b/CSS/Styles_Campings.css
@@ -26,7 +26,7 @@ html {
 }
 body {
   font-family: var(--body_font);
-  background-image: url(../img/Background_gif.gif);
+  background-image: url(../img/BACKGORUND_GIF/BACKGROUND_2.gif);
   background-size: cover;
   background-attachment: fixed;
   display: flex;
@@ -244,6 +244,7 @@ a:focus, button:focus {
   margin: 2rem auto 0;
   transition: all 0.5s ease;
   position: relative;
+  
 }
 
 .container_item:has(.card_item:hover) {
@@ -258,6 +259,7 @@ a:focus, button:focus {
   position: relative;
   transition: all 0.5s ease;
   margin: 0 auto;
+  box-shadow: 0 1rem 4rem var(--light-sage); 
 }
 
 .card_item:hover {
@@ -407,16 +409,7 @@ a:focus, button:focus {
   animation: remove-data 1s forwards;
 }
 
-/** Footer*/
-footer {
-  font-size: 1.5rem;
-  text-align: center;
-  padding: 1rem;
-  background-color: var(--deep-forest);
-  color: white;
-  margin-top: auto;
-}
-
+/*? KEY FRAME */
 @keyframes show-data {
   50% {
     transform: translateY(-16rem);
@@ -454,8 +447,21 @@ footer {
   }
 }
 
-/*! SMALL Screen - Mobile */
+
+/** FOOTER*/
+footer {
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 1rem;
+  background-color: var(--deep-forest);
+  color: white;
+  margin-top: auto;
+}
+
+
+/*! SMALL SCREEN */
 @media screen and (max-width: 768px) {
+  /** TITLE */
   #title_div {
     margin-top: 6rem;
     height: 20vh;
@@ -466,7 +472,8 @@ footer {
     font-size: 3.5rem;
     padding: 0.5rem;
   }
-  
+
+  /** NAV */
   nav {
     gap: 0.8rem;
     padding: 0.8rem 0.5rem;
@@ -491,6 +498,7 @@ footer {
     padding-block: 2rem;
   }
   
+  /** CARDS */
   .card_container {
     row-gap: 3rem;
   }
@@ -539,7 +547,7 @@ footer {
       transform: translateY(-7rem);
     }
   }
-
+  /** DESCRIPTION BAR */
   .card_item {
     height: 6rem;
   }
@@ -571,13 +579,15 @@ footer {
   }
 }
 
-/*! MEDIUM Screen - Tablet */
+/*! MEDIUM SCREEN  */
 @media screen and (min-width: 769px) and (max-width: 1024px) {
+  /** TITLE */
   #title_div header h1 {
     font-size: 5rem;
     padding: 1rem;
   }
   
+  /** CARDS */
   .card_container {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 2rem;
@@ -614,6 +624,7 @@ footer {
     font-size: 1.8rem;
   }
   
+  /** NAV */
   nav {
     gap: 2rem;
   }
@@ -631,6 +642,7 @@ footer {
     }
   }
 
+  /** DESCRIPTION BAR */
   .card_item {
     height: 7rem;
   }
@@ -662,13 +674,15 @@ footer {
   }
 }
 
-/*! BIG Screen - Desktop */
+/*! BIG SCREEN  */
 @media screen and (min-width: 1025px) {
+  /** TITLE */
   #title_div header h1 {
     font-size: 8rem;
     padding: 1.5rem;
   }
-  
+
+  /** CARDS */
   .container {
     padding-block: 4rem;
   }
@@ -708,6 +722,7 @@ footer {
     font-size: 2rem;
   }
   
+  /** NAV */
   nav {
     gap: 3rem;
   }
@@ -725,6 +740,7 @@ footer {
     }
   }
 
+  /** DESCRIPTION BAR */
   .card_item {
     height: 8rem;
   }
