--- a/CSS/Styles_Tips.css
+++ b/CSS/Styles_Tips.css
@@ -302,7 +302,7 @@ a:focus, button:focus {
   min-height: fit-content;
   height: 1rem;
   padding: 3rem 2rem;
-}lk
+}
 
 .items {
   position: absolute;
